--- a/style.css
+++ b/style.css
@@ -1,5 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=MuseoModerno:wght@500;900&display=swap");
 
+:root {
+  --primary: #01069b;
+  --primary-dark: #010459;
+  --primary-light: #dbdcfd;
+  --secondary: #cf8617;
+  --secondary-light: #f1c88b;
+  --grey-dark: #292826;
+  --grey-light: #e6e6e7;
+}
+
 html {
   box-sizing: border-box;
 }
@@ -17,10 +27,11 @@ body {
 
 main {
   width: 290px;
-  border: solid black 1px;
+  /* border: solid black 1px; */
   margin: auto;
   padding: 1em;
   border-radius: 20px;
+  background-color: var(--primary-dark);
 }
 
 .display,
@@ -31,6 +42,7 @@ main {
 }
 
 .display {
+  background-color: var(--primary-light);
   font-size: 2rem;
   text-align: right;
   padding-right: 0.1em;
@@ -57,10 +69,22 @@ main {
 }
 
 button {
+  background-color: var(--grey-dark);
+  color: var(--secondary-light);
   width: 53px;
   height: 53px;
   border-radius: 50%;
   font-family: "MuseoModerno", cursive;
   font-size: 1.5rem;
   border: none;
+}
+
+.general {
+  background-color: var(--grey-light);
+  color: var(--primary-dark);
+}
+
+.operation {
+  background-color: var(--secondary-light);
+  color: var(--primary-dark);
 }
